--- a/src/content/books/clean-code.mdx
+++ b/src/content/books/clean-code.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Clean Code"
+title: "Código Limpo (Clean Code)"
 author: "Robert C. Martin (Uncle Bob)"
 description: "Escreva codigo que outros humanos conseguem entender"
 category: "Codigo"
