--- a/src/content/books/ddia.mdx
+++ b/src/content/books/ddia.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Designing Data-Intensive Applications (DDIA)"
+title: "Projetando Aplicações Intensivas em Dados (DDIA)"
 author: "Martin Kleppmann"
 description: "A biblia de sistemas distribuidos, bancos de dados e arquitetura"
 category: "Sistemas"
