--- a/src/content/books/design-patterns-gof.mdx
+++ b/src/content/books/design-patterns-gof.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Design Patterns (Gang of Four)"
+title: "Padrões de Projeto (Design Patterns — GoF)"
 author: "Erich Gamma, Richard Helm, Ralph Johnson, John Vlissides"
 description: "O catalogo original de 23 design patterns que todo livro e framework referencia"
 category: "Arquitetura"
