--- a/src/content/books/mythical-man-month.mdx
+++ b/src/content/books/mythical-man-month.mdx
@@ -1,5 +1,5 @@
 ---
-title: "The Mythical Man-Month"
+title: "O Mítico Homem-Mês (The Mythical Man-Month)"
 author: "Frederick P. Brooks Jr."
 description: "Classico de 1975 sobre gestao de projetos de software que continua absurdamente relevante"
 category: "Classico"
