--- a/src/content/books/phoenix-project.mdx
+++ b/src/content/books/phoenix-project.mdx
@@ -1,5 +1,5 @@
 ---
-title: "The Phoenix Project"
+title: "O Projeto Fênix (The Phoenix Project)"
 author: "Gene Kim, Kevin Behr, George Spafford"
 description: "Um romance que ensina os principios do DevOps atraves de uma narrativa envolvente"
 category: "DevOps"
