--- a/src/content/books/pragmatic-programmer.mdx
+++ b/src/content/books/pragmatic-programmer.mdx
@@ -1,5 +1,5 @@
 ---
-title: "The Pragmatic Programmer"
+title: "O Programador Pragmático (The Pragmatic Programmer)"
 author: "David Thomas & Andrew Hunt"
 description: "O livro que transforma sua mentalidade de executor de tarefas para solucionador de problemas"
 category: "Engenharia"
