--- a/src/content/books/refactoring.mdx
+++ b/src/content/books/refactoring.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Refactoring"
+title: "Refatoração (Refactoring)"
 author: "Martin Fowler"
 description: "Tecnicas catalogadas para melhorar a estrutura interna do codigo sem mudar o comportamento externo"
 category: "Codigo"
