--- a/src/content/books/staff-engineer.mdx
+++ b/src/content/books/staff-engineer.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Staff Engineer"
+title: "Engenheiro Staff (Staff Engineer)"
 author: "Will Larson"
 description: "O guia para crescer na trilha tecnica alem de Senior Engineer"
 category: "Carreira"
