--- a/src/content/books/system-design-interview.mdx
+++ b/src/content/books/system-design-interview.mdx
@@ -1,5 +1,5 @@
 ---
-title: "System Design Interview (Vol 1 e 2)"
+title: "Entrevista de System Design (System Design Interview, Vol 1 e 2)"
 author: "Alex Xu"
 description: "Estudos de caso praticos de sistemas reais com decisoes de arquitetura explicadas"
 category: "Entrevistas"
